log

Thu 14 Mar 2024 08:46:56 PM UTC: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:3: error: ‘max’ undeclared (first use in this function); did you mean ‘fmax’?
   14 |   max = arr[0];
      |   ^~~
      |   fmax
exercises.c:14:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
   27 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7097c98
Thu 14 Mar 2024 08:47:20 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:9: error: ‘max’ undeclared (first use in this function); did you mean ‘fmax’?
   18 |         max = arr[i];
      |         ^~~
      |         fmax
exercises.c:18:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4278ca5
Thu 14 Mar 2024 08:47:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
6a2fc2f
Thu 14 Mar 2024 08:49:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2ebe122
Thu 14 Mar 2024 08:54:59 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   36 |   for (int i = 0; i < size / 2; i++)
      |   ^~~
exercises.c:38:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   38 |     arr[i] = arr[size - i - 1];
      |     ^~~
exercises.c:38:9: error: ‘i’ undeclared (first use in this function)
   38 |     arr[i] = arr[size - i - 1];
      |         ^
exercises.c:38:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:35:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   35 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ce9df71
Thu 14 Mar 2024 08:55:24 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   36 |   for (int i = 0; i < size / 2; i++)
      |   ^~~
exercises.c:38:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   38 |     arr[i] = arr[size - i - 1];
      |     ^~~
exercises.c:38:9: error: ‘i’ undeclared (first use in this function)
   38 |     arr[i] = arr[size - i - 1];
      |         ^
exercises.c:38:9: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9431853
Thu 14 Mar 2024 08:59:19 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:42:5: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   42 |     for (int i = 0; i < size / 2; i++)
      |     ^~~
exercises.c:44:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   44 |       arr[i] = arr[size - i - 1];
      |       ^~~
exercises.c:45:25: error: ‘temp’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   45 |       arr[size - i - 1] = temp;
      |       ~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
caec78c
Thu 14 Mar 2024 08:59:54 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:42:7: error: expected expression before ‘int’
   42 |       int temp = arr[i];
      |       ^~~
exercises.c:41:5: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   41 |     for (int i = 0; i < size / 2; i++)
      |     ^~~
exercises.c:43:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   43 |       arr[i] = arr[size - i - 1];
      |       ^~~
exercises.c:44:27: error: ‘temp’ undeclared (first use in this function)
   44 |       arr[size - i - 1] = temp;
      |                           ^~~~
exercises.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
138f602
Thu 14 Mar 2024 09:00:58 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
e067687
Thu 14 Mar 2024 09:08:03 PM UTC: 
 exercises.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c67186d
Thu 14 Mar 2024 09:09:20 PM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|4
total_score: 30/70
d0f09ea
